fix(quote): preserve request order in QuoteBatch, close rule-2 test gap
Map.copyOf() in QuoteBatch's compact constructor replaced the caller's
request-ordered map with one whose iteration order is unspecified and
salt-randomised per JVM run; GetQuoteTool iterates resolved.values()
to build quotes[], so a batch response reordered on every restart.
Switch both fields to an unmodifiable copy of a LinkedHashMap.

Also: replace the mock-only lowercase-key regression test (which could
not detect MarketDataService.quotes() keying `failed` by the
uppercased cache key) with a service-level test that exercises the
real code path, drop the redundant duplicate test, add a service-level
test proving the reported kind is the last provider's in the fallback
chain, add a quotes[] order-pinning assertion, and tighten
containsKey(BAD) to containsEntry(BAD, UNAVAILABLE).